fixed bug with nav bar not showing in map

--- a/src/styles/map.scss
+++ b/src/styles/map.scss
@@ -6,4 +6,8 @@
   #opacityBar {
       pointer-events: all !important;
   }
+
+.leaflet-control { z-index: 0 !important}
+.leaflet-pane { z-index: 0 !important}
+.leaflet-top, .leaflet-bottom {z-index: 0 !important}
   
